another small glich

--- a/index.html
+++ b/index.html
@@ -406,12 +406,12 @@
 
         <!-- Portfolio Modals--><!-- Modal 0-->
         <div class="portfolio-modal modal fade" id="portfolioModal0" tabindex="-1" role="dialog" aria-hidden="true">
-            <div >
+            <div class="modal-dialog">
                 <div class="modal-content">
                     <div class="close-modal" data-dismiss="modal"><img src="assets/img/close-icon.svg" alt="Close modal" /></div>
-                    <div >
+                    <div class="container">
                         <div class="row justify-content-center">
-                            <div >
+                            <div class="col-lg-8">
                                 <div class="modal-body">
                                     <!-- Project Details Go Here-->
                                     <h2 class="text-uppercase">Simple projects</h2>
