--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
                           <a class="portfolio-link" data-toggle="modal" href="#portfolioModal2">
                           <div class="portfolio-hover"><img class="mx-auto rounded-circle" src="assets/img/projects/01front/02.png"  alt="" /></a></div>
                             <h4>StockByte</h4>
-                            <p class="text-muted">React, Rails, CSS, API</p>
+                            <p class="text-muted">React, Rails, Reactstrap, API</p>
 
                             <div  style="margin-top: 5px; text-align:center;">
                                 <a class="portfolio-link" data-toggle="modal" href="#portfolioModal2">
