--- a/index.html
+++ b/index.html
@@ -24,6 +24,20 @@
             <link rel="apple-touch-icon" sizes="114x114" href="assets/img/apple-icon/apple-icon-114x114.png" />
             <link rel="apple-touch-icon" sizes="144x144" href="assets/img/apple-icon/apple-icon-144x144.png" />
 
+
+            <!-- Global site tag (gtag.js) - Google Analytics -->
+            <script async src="https://www.googletagmanager.com/gtag/js?id=G-HBB7WVP4F3"></script>
+            <script>
+              window.dataLayer = window.dataLayer || [];
+              function gtag(){dataLayer.push(arguments);}
+              gtag('js', new Date());
+
+              gtag('config', 'G-HBB7WVP4F3');
+            </script>
+
+
+
+
     </head>
     <body id="page-top">
 
@@ -48,6 +62,8 @@
                             <li class="nav-item"><a class="nav-link js-scroll-trigger btn1" href="#about" style="font-weight: 900;">About</a></li>
                             <li class="nav-item"><a class="nav-link js-scroll-trigger btn1" href="#contact" style="font-weight: 900;">Contact</a></li>
                             <li class="nav-item"><a class="nav-link js-scroll-trigger btn1" href="02blog.html" style="font-weight: 900;">{Blog}</a></li>
+
+
 
 
 
@@ -334,7 +350,10 @@
             <div class="container">
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase">Contact Me</h2>
+                    <h2 class="section-heading text-uppercase"><p>Today: <script> document.write(new Date().toLocaleDateString()); </script></p></h2>
                     <h3 class="section-subheading text-muted">Will be very happy to hear from you!</h3>
+
+
                 </div>
 
                 <form id="contactForm" name="sentMessage" novalidate="novalidate">
@@ -369,6 +388,27 @@
         </section>
 
 
+
+<!-- counter -->
+
+
+
+<section class="page-section bg-light" id="counter" >
+    <div class="container">
+        <!-- <div class="row" > -->
+          <a href='https://www.symptoma.it/'></a>
+          <script type='text/javascript' src='https://www.freevisitorcounters.com/auth.php?id=87a093b1dad7ee00c78f4e885483c44a69c31a57'></script>
+          <script type="text/javascript" src="https://www.freevisitorcounters.com/en/home/counter/703328/t/1"></script>
+          </a>
+
+      <!-- </div> -->
+    </div>
+</section>
+
+
+
+
+
         <!-- Footer-->
       <footer class="footer py-4">
         <div id="footer">
@@ -392,6 +432,10 @@
                             <i class="fa fa-phone"></i></a>
                             <a class="btn btn-dark btn-social mx-2" href="resume.pdf" target="_blank">
                               <i class="fa fa-file-pdf"></i></a>
+
+
+
+
                       </div>
                     <div class="col-lg-4 text-lg-right">
                       <a class="mr-3" data-toggle="modal" href="#portfolioModal100" style="color:black;">Privacy Policy</a>
