--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <link href="https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic" rel="stylesheet" type="text/css" />
         <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700" rel="stylesheet" type="text/css" />
         <!-- Core theme CSS (includes Bootstrap)-->
-        <link href="css/styles.css" rel="stylesheet" />
+        <link href="css/styles.css" rel="stylesheet">
 
         <!-- icon for saving a web site on the screen -->
             <link rel="apple-touch-icon" sizes="57x57" href="assets/img/apple-icon/apple-icon-57x57.png" />
@@ -128,8 +128,6 @@
                     <div class="col-md-3">
                         <span class="fa-stack fa-4x"><i class="fas fa-circle fa-stack-2x text-primary"></i><i class="fas fa-laptop fa-stack-1x fa-inverse"></i></span>
                         <h4 class="my-3">Front End</h4>
-                        <p class="text-muted">HTML</p>
-                        <p class="text-muted">CSS</p>
                         <p class="text-muted">JavaScript</p>
                         <p class="text-muted">React</p>
                         <p class="text-muted">Webpack</p>
@@ -162,8 +160,6 @@
                         <span class="fa-stack fa-4x"><i class="fas fa-circle fa-stack-2x text-primary"></i><i class="fab fa-connectdevelop fa-stack-1x fa-inverse"></i></span>
                         <h4 class="my-3">Dev-Ops</h4>
                         <p class="text-muted">AWS</p>
-                        <p class="text-muted">Jenkins</p>
-                        <p class="text-muted">Docker</p>
                         <p class="text-muted">Heroku</p>
                     </div>
 
@@ -478,7 +474,7 @@
 
                                           <!-- </div> -->
 
-                                            <h7>Treasure Hunt (HTML CSS)</h7>
+                                            <h7>Treasure Hunt (JS)</h7>
                                             <!-- <p class="text-muted">HTML CSS</p> -->
 
 
@@ -524,7 +520,7 @@
                                                     <i class="fas fa-play-circle fa-1x"></i></a>
                                               <!-- </div> -->
 
-                                                <h7>Boxes add & delete (REACT)</h7>
+                                                <h7>Boxes (REACT)</h7>
                                                 <!-- <p class="text-muted">React App</p> -->
 
 
@@ -569,7 +565,7 @@
                                                     <i class="fas fa-info-circle fa-1x"></i></a>&nbsp
                                                   <a class="portfolio-link" href="https://github.com/MyProjects898/challenge-magic-8-ball-react-rainyday" target="_blank">
                                                     <i class="fab fa-github fa-1x" aria-hidden="true"></i></a>&nbsp
-                                                  <a class="portfolio-link" href="https://xenadev-mgic8.herokuapp.com/" target="_blank">
+                                                  <a class="portfolio-link" href="https://magic-evil-eye.herokuapp.com/" target="_blank">
                                                     <i class="fas fa-play-circle fa-1x"></i></a>
                                               <!-- </div> -->
 
@@ -934,7 +930,7 @@
                                     <p>REACT App</p>
                                     <ul class="list-inline">
                                         <li>Date: March 2020</li>
-                                        <li>Credits: Xena with a mob/li>
+                                        <li>Credits: Xena /li>
                                         <li>Category: Game</li>
                                         <li>
                                           <div  style="margin-top: 5px; text-align:center;">
@@ -942,7 +938,7 @@
                                                 <i class="fas fa-info-circle fa-3x"></i></a>&nbsp -->
                                               <a class="portfolio-link" href="https://github.com/MyProjects898/challenge-magic-8-ball-react-rainyday" target="_blank">
                                                 <i class="fab fa-github fa-3x" aria-hidden="true"></i></a>&nbsp
-                                              <a class="portfolio-link" href="https://xenadev-mgic8.herokuapp.com/" target="_blank">
+                                              <a class="portfolio-link" href="https://magic-evil-eye.herokuapp.com/" target="_blank">
                                                 <i class="fas fa-play-circle fa-3x"></i></a>
                                           </div>
                                         </li>
