--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
                         <a class="portfolio-link" data-toggle="modal" href="#portfolioModal0">
                         <div class="portfolio-hover"><img class="mx-auto rounded-circle" src="assets/img/projects/01front/10.png" alt="" /></a></div>
                           <h4>Simple Apps</h4>
-                          <p class="text-muted">very simple HTML CSS React</p>
+                          <p class="text-muted">very simple JS React</p>
 
                           <div  style="margin-top: 5px; text-align:center;">
                               <a class="portfolio-link" data-toggle="modal" href="#portfolioModal0">
